<resources>
    <string name="app_name">HeApp</string>
    <string name="title_home">登陆</string>
    <string name="title_dashboard">数据采集</string>
    <string name="title_notifications">数据处理</string>
    <string name="title_UserName">用户名：</string>
    <string name="title_PSW">密  码：</string>
    <string name="hint_PSW">请输入密码...</string>
    <string name="hint_User">请输入用户名...</string>
    <string name="text_Name">用户名</string>
    <string name="strNetworkTipsCancelBtn">取消</string>
    <string name="strNetworkTipsConfirmBtn">继续下载</string>
    <string name="strNetworkTipsMessage">你已切换到移动网络，是否继续当前下载？</string>
    <string name="strNetworkTipsTitle">网络提示</string>
    <string name="strNotificationClickToContinue">继续下载</string>
    <string name="strNotificationClickToInstall">点击安装</string>
    <string name="strNotificationClickToRetry">点击重试</string>
    <string name="strNotificationClickToView">点击查看</string>
    <string name="strNotificationDownloadError">下载失败</string>
    <string name="strNotificationDownloadSucc">下载完成</string>
    <string name="strNotificationDownloading">正在下载</string>
    <string name="strNotificationHaveNewVersion">有新版本</string>
    <string name="strToastCheckUpgradeError">检查新版本失败，请稍后重试</string>
    <string name="strToastCheckingUpgrade">正在检查，请稍候...</string>
    <string name="strToastYourAreTheLatestVersion">你已经是最新版了</string>
    <string name="strUpgradeDialogCancelBtn">下次再说</string>
    <string name="strUpgradeDialogContinueBtn">继续</string>
    <string name="strUpgradeDialogFeatureLabel">更新说明</string>
    <string name="strUpgradeDialogFileSizeLabel">包大小</string>
    <string name="strUpgradeDialogInstallBtn">安装</string>
    <string name="strUpgradeDialogRetryBtn">重试</string>
    <string name="strUpgradeDialogUpdateTimeLabel">更新时间</string>
    <string name="strUpgradeDialogUpgradeBtn">立即更新</string>
    <string name="strUpgradeDialogVersionLabel">版本</string>
    <string name="action_settings">设置</string>
    <string name="add">添加</string>
    <string name="animate">Animate</string>
    <string name="back">返回</string>
    <string name="basic_description">介绍如何创建一个基本地图</string>
    <string name="basic_map">基本地图</string>
    <string name="basic_product_lable">基本产品：</string>
    <string name="bluetooth_device_tip">提示：若未检测到已打开的蓝牙设备，请重启该设备后重新检测</string>
    <string name="bottom_center">底部居中</string>
    <string name="bottom_left">左下</string>
    <string name="bottom_right">右下</string>
    <string name="bounded_devices">已配对的设备</string>
    <string name="broadband_hd_tv_situation">客户高清电视开通情况:</string>
    <string name="broadband_mobile_situation">客户手机宽带开通情况</string>
    <string name="bundMS">绑定末梢</string>
    <string name="busline_demo">Busline公交查询</string>
    <string name="busline_description">介绍如何在地图中绘制BusLine</string>
    <string name="buttonScale">获取比例尺</string>
    <string name="camera_demo">Camera功能</string>
    <string name="camera_description">介绍在地图中操作Camera各种功能</string>
    <string name="cancel">取消</string>
    <string name="circle_demo">Circles功能</string>
    <string name="circle_description">介绍在地图中绘制圆形</string>
    <string name="clear_map">Clear</string>
    <string name="cmccha_crm_permission_desc">中国移动和助手自定义权限</string>
    <string name="compass">指南针</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="del">删除</string>
    <string name="demo_title">AMaps2D Demos</string>
    <string name="detail"><i><u>详细 </u></i></string>
    <string name="down_arrow">↓</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="edit">更新</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="events_demo">Events功能</string>
    <string name="events_description">介绍对地图的点击，长按，拖动地图事件功能</string>
    <string name="exit">退出系统</string>
    <string name="fill_color">Fill Color</string>
    <string name="fill_stroke">Fill Stroke</string>
    <string name="geocoder_demo">地理编码 功能</string>
    <string name="geocoder_description">介绍 geocoder地理编码 功能</string>
    <string name="getSMS"><u>获取短信</u></string>
    <string name="go_to_lujiazui">陆家嘴</string>
    <string name="go_to_zhongguancun">中关村</string>
    <string name="groundoverlay_demo">GroundOverlay功能</string>
    <string name="groundoverlay_description">介绍在地图中绘制GroundOverlay功能</string>
    <string name="hello">Hello World, CRMActivity!</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">首页</string>
    <string name="hybrid">Hybrid</string>
    <string name="imgContentDesc">NFC 背景图片</string>
    <string name="layers_demo">Layers图层功能</string>
    <string name="layers_description">介绍地图分别以正常、卫星模式展示出</string>
    <string name="left_arrow">←</string>
    <string name="livemanage">业务管理</string>
    <string name="location">正在定位中</string>
    <string name="locationGPS_demo">gps定位功能</string>
    <string name="locationGPS_description">介绍如何使用gps定位</string>
    <string name="locationNetwork_demo">网络定位功能</string>
    <string name="locationNetwork_description">介绍如何使用网络定位</string>
    <string name="locationSensorGPS_demo">gps追随功能</string>
    <string name="locationSensorGPS_demo_description">介绍如何用gps定位图标箭头随手机转动而转动</string>
    <string name="locationsource_demo">Location小蓝点功能</string>
    <string name="locationsource_description">介绍对系统定位显示小蓝点功能</string>
    <string name="login">登    录</string>
    <string name="login_get">获  取</string>
    <string name="login_name">工    号：</string>
    <string name="login_password">密    码：</string>
    <string name="login_verifycode">验证码：</string>
    <string name="logo_position">logo位置</string>
    <string name="logout">注销</string>
    <string name="mapOption_demo">AMapOptions实现地图</string>
    <string name="mapOption_description">介绍用AMapOptions展示一个地图</string>
    <string name="map_not_ready">SupportMapFragment初始化失败</string>
    <string name="map_screenshot">地图截屏</string>
    <string name="marker_demo">Markers功能</string>
    <string name="marker_description">介绍在地图上添加marker和infoWindow</string>
    <string name="marketing_campaign_label">营销活动：</string>
    <string name="message" />
    <string name="modem_select_lable">光猫活动：</string>
    <string name="more">更多</string>
    <string name="move_the_camera">移动camera</string>
    <string name="my_location">My Location</string>
    <string name="mylocation_layer">我的位置图层</string>
    <string name="next">下一步</string>
    <string name="no_demos">No demos</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="none_found">没有可用设备</string>
    <string name="none_paired">没有已配对的设备</string>
    <string name="normal">Normal</string>
    <string name="normal_address_label">标准地址：</string>
    <string name="normal_address_search_lable">标准地址查询</string>
    <string name="offlinemap_demo">离线地图功能</string>
    <string name="offlinemap_description">介绍如何使用离线地图</string>
    <string name="ok">确定</string>
    <string name="other_devices">其他活动设备</string>
    <string name="picture_image_loading">正在加载…</string>
    <string name="picture_load_image_failed">点击屏幕，重新加载</string>
    <string name="picture_next_album">下一组：</string>
    <string name="picture_previous_album">上一组：</string>
    <string name="picture_save_fail">保存图片失败</string>
    <string name="picture_save_succeed">图片已保存到相册</string>
    <string name="poiaroundsearch_demo">poi周边搜索</string>
    <string name="poiaroundsearch_description">介绍poi周边搜索功能</string>
    <string name="poikeywordsearch_demo">poi关键字搜索</string>
    <string name="poikeywordsearch_description">介绍poi关键字搜索功能</string>
    <string name="polygon_demo">Polygons功能</string>
    <string name="polygon_description">介绍在地图绘制多边形</string>
    <string name="polyline_demo">Polylines功能</string>
    <string name="polyline_description">介绍在地图中绘制线条</string>
    <string name="pressTip">按下说话</string>
    <string name="product_code_edit_hint">请输入产品编码</string>
    <string name="product_code_lable">产品编码：</string>
    <string name="product_code_title">产品编码</string>
    <string name="product_name_hint">请填写产品名称</string>
    <string name="product_name_lable">产品名称：</string>
    <string name="product_name_title">产品名称</string>
    <string name="product_type_lable">产品类型：</string>
    <string name="product_type_title">产品类型</string>
    <string name="properties_circle">设置Circle属性</string>
    <string name="properties_polygon">设置Polygon属性</string>
    <string name="properties_polyline">设置Polyline属性</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_pull_label">上拉可加载更多…</string>
    <string name="pull_to_refresh_refreshing_label">@string/pull_to_refresh_header_hint_loading</string>
    <string name="pull_to_refresh_release_label">松开加载更多…</string>
    <string name="pull_to_refresh_tap_label">点击刷新…</string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 :</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="recommend">优惠推荐</string>
    <string name="recording">正在录音……</string>
    <string name="report_and_family">和家庭发展情况：</string>
    <string name="report_bd_handle">宽带业务办理情况：</string>
    <string name="report_bd_handle_query_type">统计类型：</string>
    <string name="report_high_speed">高速率用户发展情况：</string>
    <string name="report_loading">加载中请稍候。。。</string>
    <string name="report_loading_error">加载失败，点击重新加载。</string>
    <string name="report_new_add">小区宽带用户新增情况：</string>
    <string name="report_port_used">小区端口使用情况：</string>
    <string name="report_port_used_detail">端口使用详情：</string>
    <string name="report_renew">小区宽带用户续费情况：</string>
    <string name="report_tv_box">魔百和发展情况：</string>
    <string name="reset_map">Reset</string>
    <string name="right_arrow">→</string>
    <string name="rotate">旋转手势</string>
    <string name="route_demo">Route路径规划</string>
    <string name="route_description">介绍如何在地图中绘制Route</string>
    <string name="sa_confirm_share">确认要分享吗？</string>
    <string name="sa_exit">退出</string>
    <string name="sa_mac_address">MAC地址：</string>
    <string name="sa_search">刷新</string>
    <string name="sa_searching">搜索设备中……</string>
    <string name="sa_share">应用分享</string>
    <string name="sa_tip">请将远程蓝牙设备打开，并且保持可见……</string>
    <string name="satellite">Satellite</string>
    <string name="scale">比例尺</string>
    <string name="scanning">正在扫描设备...</string>
    <string name="screenshot_demo">地图截屏功能</string>
    <string name="screenshot_description">介绍对地图进行截屏</string>
    <string name="scroll">滑动手势</string>
    <string name="search">查询</string>
    <string name="search_title">搜索关键字</string>
    <string name="select">选择</string>
    <string name="tip">提示</string>
    <string name="showhin">①把模板文件（phonecsv.csv）放到雷电模拟器的共享文件夹下面。\n
②版本有更新，点击清理历史资源。\n
③导入数据会缓冲到系统数据库中，请分多次导入，不限制上限，但不建议超过百万。\n
④导入数据用excel或者wps另存为csv格式。\n
⑤处理数据分批处理，每批1000条，自动循环直到所有缓存数据处理完毕。\n
        ⑥导出数据，导出的文件在雷电模拟器共享文件夹下面。</string>
</resources>