<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/linear01" android:background="@drawable/bg_shap_rectangle_blue_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <LinearLayout android:orientation="horizontal" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_medium" android:layout_gravity="center" android:id="@id/te1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/product_type_lable" />
            <Spinner android:textSize="@dimen/text_size_medium" android:layout_gravity="center" android:id="@id/productType" android:background="@drawable/spinner_common_bg_f" android:layout_width="fill_parent" android:layout_height="wrap_content" android:dropDownWidth="fill_parent" android:spinnerMode="dropdown" />
        </LinearLayout>
        <View android:background="#ffdddddd" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="2.0dip" />
        <LinearLayout android:orientation="horizontal" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_medium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/product_code_lable" />
            <EditText android:textSize="@dimen/text_size_medium" android:id="@id/productCode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/product_code_edit_hint" android:singleLine="true" android:maxLength="100" />
        </LinearLayout>
        <View android:background="#ffdddddd" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="2.0dip" />
        <LinearLayout android:orientation="horizontal" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip">
            <TextView android:textSize="@dimen/text_size_medium" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/product_name_lable" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:textSize="@dimen/text_size_medium" android:id="@id/productName" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/product_name_hint" android:singleLine="true" android:maxLength="100" android:layout_weight="2.0" android:inputType="text" />
                <Button android:textSize="14.0dip" android:textColor="@android:color/black" android:layout_gravity="center_vertical" android:id="@id/search_production" android:background="@drawable/btn" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/linear02" android:background="@drawable/bg_shap_rectangle_blue_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_above="@id/linear_layout_btn" android:layout_below="@id/linear01">
        <LinearLayout android:orientation="horizontal" android:background="@color/bg_rectangle_blue" android:paddingLeft="40.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="3.0dip" android:layout_marginBottom="8.0dip">
            <TextView android:textSize="@dimen/text_size_medium" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/product_code_title" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/text_size_medium" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/product_name_title" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/text_size_medium" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/product_type_title" android:layout_weight="1.0" />
        </LinearLayout>
        <View android:background="#ffbfbfbf" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <ListView android:id="@id/listView_product" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/linear_layout_btn" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_alignParentBottom="true">
        <Button android:textColor="@color/black" android:id="@id/btn_cancel" android:background="@drawable/btn_cancel_selector" android:layout_width="120.0dip" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/cancel" />
        <Button android:textSize="@dimen/text_size_medium" android:textColor="@drawable/btn_textcolor_selector" android:id="@id/btn_ensure" android:background="@drawable/btn_ok_bule" android:layout_width="120.0dip" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/ok" />
    </LinearLayout>
</RelativeLayout>