<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/msg_num_validate" android:layout_width="wrap_content" android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:background="@drawable/bg_title" android:layout_width="300.0dip" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_medium" android:textColor="@android:color/white" android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:text="@string/tip" android:singleLine="true" />
    </LinearLayout>
    <TextView android:textSize="@dimen/text_size_medium" android:textColor="@android:color/black" android:gravity="center_horizontal" android:id="@id/message" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="@dimen/text_size_medium" android:id="@id/positiveButton" android:background="@drawable/btn_ok_bule" android:layout_width="120.0dip" android:layout_height="38.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="10.0dip" android:text="@string/ok" />
        <Button android:textSize="@dimen/text_size_medium" android:id="@id/negativeButton" android:background="@android:color/darker_gray" android:visibility="gone" android:layout_width="120.0dip" android:layout_height="wrap_content" android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>