<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff060514" android:layout_width="300.0dip" android:layout_height="400.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/share" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sa_share" />
    <View android:background="#ff696969" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" />
    <ListView android:id="@id/deviceListView" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:isScrollContainer="true" />
    <View android:background="#ff696969" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" />
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="50.0dip">
        <Button android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@id/exit" android:paddingLeft="20.0dip" android:layout_width="140.0dip" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/sa_exit" />
        <View android:layout_gravity="center_horizontal" android:background="#ff696969" android:layout_width="1.0dip" android:layout_height="50.0dip" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:layout_centerInParent="true" />
        <Button android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@id/search" android:paddingRight="20.0dip" android:layout_width="140.0dip" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/sa_search" android:layout_alignTop="@id/exit" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>