<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="475.0">
        <TableRow android:background="@drawable/login_rectangle_hollow">
            <TextView android:textColor="@android:color/white" android:layout_gravity="center_vertical" android:id="@id/label_type" android:layout_marginLeft="8.0dip" android:text="账号类型：" style="@style/wrap_content" />
            <Spinner android:id="@id/spinner_type" android:background="@null" android:layout_width="200.0dip" android:layout_height="35.0dip" android:spinnerMode="dropdown" />
        </TableRow>
        <View android:layout_width="fill_parent" android:layout_height="15.0dip" />
        <TableRow android:background="@drawable/login_rectangle_hollow">
            <TextView android:textColor="@android:color/white" android:id="@id/label_username3" android:layout_marginLeft="8.0dip" android:text="手机号：" style="@style/wrap_content" />
            <AutoCompleteTextView android:id="@id/input_username3" android:ems="10" android:maxLength="40" android:completionThreshold="1" android:inputType="text" android:imeOptions="actionNext" style="@style/login" />
        </TableRow>
        <View android:layout_width="fill_parent" android:layout_height="15.0dip" />
        <TableRow android:background="@drawable/login_rectangle_hollow">
            <TextView android:textColor="@android:color/white" android:id="@id/label_password3" android:layout_marginLeft="8.0dip" android:text="@string/login_password" style="@style/wrap_content" />
            <EditText android:id="@id/input_password3" android:text="" android:maxLength="40" android:inputType="textPassword" android:imeOptions="actionNext" style="@style/login" />
            <CheckBox android:textColor="@android:color/white" android:layout_gravity="right" android:id="@id/remember_pwd3" android:layout_width="@dimen/button_width" android:layout_height="30.0dip" android:layout_marginRight="8.0dip" android:text="记住密码" />
        </TableRow>
        <View android:layout_width="fill_parent" android:layout_height="15.0dip" />
        <TableRow android:background="@drawable/login_rectangle_hollow">
            <TextView android:textColor="@android:color/white" android:id="@id/label_verifycode3" android:layout_marginLeft="8.0dip" android:text="@string/login_verifycode" style="@style/wrap_content" />
            <EditText android:id="@id/input_verifycode3" android:text="" android:singleLine="true" android:inputType="number" android:imeOptions="actionDone" style="@style/login" />
            <com.ai.cmcchina.crm.view.VerifyCodeView android:id="@id/view_verifycode3" android:visibility="gone" android:layout_width="@dimen/button_width" android:layout_height="@dimen/widget_height" android:layout_marginLeft="@dimen/column_padding" />
            <TextView android:layout_gravity="right" android:id="@id/textView_send_sms3" android:layout_width="wrap_content" android:layout_height="@dimen/widget_height" android:layout_marginRight="8.0dip" android:text="发送验证" />
        </TableRow>
        <View android:layout_width="fill_parent" android:layout_height="8.0dip" />
        <TextView android:textColor="@android:color/white" android:layout_gravity="right" android:id="@id/register" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  注册和伙人账号" />
        <Button android:id="@id/button_login3" android:background="@drawable/login_rectangle_solid" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="10.0dip" android:text="@string/login" />
        <TextView android:textSize="@dimen/text_size_small" android:textColor="@android:color/white" android:ellipsize="marquee" android:gravity="center" android:layout_marginTop="10.0dip" android:text="@string/message" android:marqueeRepeatLimit="marquee_forever" style="@style/match_parent" />
    </TableLayout>
</LinearLayout>